Fix display on iOS in Firefox and Safari

--- a/client/components/public/home.less
+++ b/client/components/public/home.less
@@ -7,6 +7,8 @@
 }
 
 #header-video-container {
+  transform: translate3d(0, 0, 0);
+  -webkit-transform: translate3d(0,0,0);
   min-width: 100%;
   min-height: 530px;
 }
@@ -45,6 +47,7 @@
   text-transform: uppercase;
 }
 .header-text{
+  z-index: 2;
   position: relative;
   font-family: 'Exo', sans-serif;
   color: white;
